Bug 1165824 - [RTL][Contacts]The name and address are truncated at wrong side at select Gmail contacts view. r=ferjm

--- a/shared/pages/import/style/import.css
+++ b/shared/pages/import/style/import.css
@@ -206,3 +206,10 @@ html[dir="rtl"] .block-item {
   left: unset;
   right: 1rem;
 }
+
+[data-type="list"] li.block-item bdi {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
+  max-width: 100%;
+}
